--- a/mybookmark_mywork/bookmarkapp/templates/bookmarkapp/bookmark_list.html
+++ b/mybookmark_mywork/bookmarkapp/templates/bookmarkapp/bookmark_list.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title> Django Bookmark list </title>
-</head>
-<body>
+{% extends"base.html" %}
+
+{%block title%} Django Bookmark {%endblock%}
+
+{%block content%}
 <div id ="content">
     <h1>Bookmark list</h1>
     <ul>
         {% for bookmark in object_list %}
            {% comment %} <li> <a href= '{{bookmark.url}}'>{{bookmark}}</a></li> {% endcomment %}
-           <li> <a href= "{% url 'detail' bookmark.id %}" target ='_blank'>{{bookmark}}</a></li>
+           <li> <a href= "{% url 'detail' bookmark.id %}" >{{bookmark}}</a></li>
         {% endfor %}
     </ul>
 </div>
-</body>
-</html>
+
+{%endblock%}
+
