--- a/mysite_base/blog/templates/blog/post_detail.html
+++ b/mysite_base/blog/templates/blog/post_detail.html
@@ -1,27 +1,36 @@
-<h2>{{object.title}}</h2>
+{% extends "base.html" %}
 
-<!-- previous or next post link -->
-<p class="other_posts">
-    <a href="{{object.get_previous_post.get_absoulte_url}}">
-        {{object.get_previous_post}}
-    </a>
-    |
-    <a href="{{object.get_next_post.get_absoulte_url}}">
-        {{object.get_next_post}}
-    </a>
-    
-</p>
+{%block title%} Post detail {%endblock%}
 
-<!-- date -->
-<p class="date">
+{%block content%}
 
-    {{ object.modify_date |date:"Y-m-d H:i"}}
-    
-</p>
-<br/>
-<!-- post content -->
-<div class="body">
+<div id ="content">
+    <h2>{{object.title}}</h2>
 
-    {{ object.content|linebreaks }}
-    
+    <!-- previous or next post link -->
+    <p class="other_posts">
+        <a href="{{object.get_previous_post.get_absoulte_url}}">
+            {{object.get_previous_post}}
+        </a>
+        |
+        <a href="{{object.get_next_post.get_absoulte_url}}">
+            {{object.get_next_post}}
+        </a>
+        
+    </p>
+
+    <!-- date -->
+    <p class="date">
+
+        {{ object.modify_date |date:"Y-m-d H:i"}}
+        
+    </p>
+    <br/>
+    <!-- post content -->
+    <div class="body">
+
+        {{ object.content|linebreaks }}
+        
+    </div>
 </div>
+{%endblock%}
