--- a/mybookmark_mywork/bookmarkapp/templates/bookmarkapp/bookmark_detail.html
+++ b/mybookmark_mywork/bookmarkapp/templates/bookmarkapp/bookmark_detail.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title> Django Bookmark detail </title>
-</head>
-<body>
-<div id= "content">
+{% extends"base.html" %}
+
+{%block title%} Django Bookmark detail {%endblock%}
+
+{%block content%}
+<div id ="content">
     <h1>{{object.title}}</h1>
     <ul>
            <li> URL: <a href='{{object.url}}'>{{ object.url }}</a></li>
     </ul>
 </div>
-</body>
-</html>
+{%endblock%}
